Fixed alignment of line in Home Page UniqueSellingPointsSection and changed h1 font size

--- a/components/home_page/unique_selling_points_section/unique_selling_points_section_styles.module.scss
+++ b/components/home_page/unique_selling_points_section/unique_selling_points_section_styles.module.scss
@@ -14,6 +14,11 @@
         outline: none;
         border: none;
         background-color: black;
+
+        @include within_breakpoint($extra_small_breakpoint) {
+            margin-left: auto;
+            margin-right: auto;
+        }
     }
 
     .unique_selling_points_area {
