--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -65,7 +65,8 @@ h1, h2, h3, h4, h5, h6 {
 // }
 
 h1 {
-  font-size: 55px;
+  // font-size: 55px;
+  font-size: 50px;
 }
 
 h2 {  
